# LoveNumbers

./: .gitignore  CMakeLists.txt  Makefile
config/: build.sh  configure.sh
data/: model1.txt  model2.txt  prem.200.no
examples/: CMakeLists.txt  ex1.cpp  ex2.cpp
include/LoveNumbers/: BilinearForms.hpp  Coefficients.hpp  Configure.hpp  DeckModel.h  DeckModel.hpp  Dimensions.hpp  HomogeneousModel.hpp  LinearForms.hpp  LoveNumbers.hpp  PWHomogeneousModel.hpp  RadialCoefficient.hpp  RadialMesh.h  RadialModel.hpp  RadialModelCoefficient.hpp  RadialPlanetaryModel.h  Types.hpp  test.h
miniapps/: CMakeLists.txt  app1.cpp
src/: Coefficients.cpp  DeckModel.cpp  HomogeneousModel.cpp  LinearForms.cpp  PWHomogeneousModel.cpp  RadialMesh.cpp  RadialModel.cpp  RadialPlanetaryModel.cpp  test.cpp
